--- a/static/html/index.html
+++ b/static/html/index.html
@@ -21,10 +21,10 @@
     </a>
     <div class="category-wrapper">
         <div class="cateline am-flexbox am-flexbox-justify-between">
-            <div id="activity" class="cate-item">
+            <a href="./activity/activity-list.html" id="activity" class="cate-item">
                 <div class="cate-icon activity-icon"></div>
                 <p>活动管理</p>
-            </div>
+            </a>
             <div id="singup" class="cate-item">
                 <div class="cate-icon singup-icon"></div>
                 <p>报名管理</p>
