--- a/static/html/user/register.html
+++ b/static/html/user/register.html
@@ -12,27 +12,64 @@
         <form id="formWrapper" class="form-wrapper">
             <div class="form-item border-bottom-1px">
                 <div class="am-flexbox">
-                    <span class="item-title">手机号</span>
+                    <span class="item-title mr20">手机号</span>
                     <input type="tel" placeholder="请输入手机号码" id="mobile" name="mobile" class="input-item"/>
                 </div>
             </div>
             <div class="form-item form-btn-item border-bottom-1px">
                 <div class="am-flexbox">
-                    <span class="item-title">验证码</span>
-                    <div class="input-item"><input type="tel" placeholder="请输入验证码" id="smsCaptcha" name="smsCaptcha"/></div>
+                    <span class="item-title mr20">验证码</span>
+                    <div class="input-item"><input type="tel" placeholder="请输入验证码" id="smsCaptcha" name="smsCaptcha"  style="width: 3.2rem;"/></div>
                     <button class="item-button am-button am-button-small am-button-primary" id="getVerification">获取验证码</button>
                 </div>
             </div>
             <div class="form-item border-bottom-1px">
                 <div class="am-flexbox">
-                    <span class="item-title">密码</span>
-                    <input type="password" placeholder="请输入密码" id="loginPwd" name="loginPwd" class="input-item"/>
+                    <span class="item-title mr20">昵称</span>
+                    <input type="text" placeholder="请输入昵称" id="outName" name="outName" class="input-item"/>
                 </div>
             </div>
             <div class="form-item border-bottom-1px">
                 <div class="am-flexbox">
-                    <span class="item-title">确认密码</span>
-                    <input type="password" placeholder="请再次输入密码" id="rePwd" name="rePwd" class="input-item"/>
+                    <span class="item-title mr20">真实姓名</span>
+                    <input type="text" placeholder="请输入真实姓名" id="realName" name="realName" class="input-item"/>
+                </div>
+            </div>
+            <div class="form-item border-bottom-1px">
+                <div class="am-flexbox">
+                    <span class="item-title mr20">身份证号</span>
+                    <input type="text" placeholder="请输入身份证号" id="idNo" name="idNo" class="input-item"/>
+                </div>
+            </div>
+            
+	        <div class="form-item border-bottom-1px" id="cityWrap">
+	            <div class="am-flexbox">
+	                <span class="item-title mr20">所在地区</span>
+	                <div class="input-item placeholder" id="city"  name="city" >请选择省、市、区</div>
+	            </div>
+	        </div>
+	        <div class="form-item border-bottom-1px">
+	            <div class="am-flexbox">
+	                <span class="item-title mr20">详细地址</span>
+	                <input type="text" placeholder="详细地址(街道、小区、大厦)" id="address" name="address" class="input-item"/>
+	            </div>
+	        </div>
+            <div class="form-item border-bottom-1px">
+                <div class="am-flexbox">
+                    <span class="item-title mr20">邮箱</span>
+                    <input type="text" placeholder="请输入邮箱" id="email" name="email" class="input-item"/>
+                </div>
+            </div>
+            <div class="form-item border-bottom-1px">
+                <div class="am-flexbox">
+                    <span class="item-title mr20">紧急联系人</span>
+                    <input type="text" placeholder="请输入紧急联系人姓名" id="emeContact" name="emeContact" class="input-item"/>
+                </div>
+            </div>
+            <div class="form-item border-bottom-1px">
+                <div class="am-flexbox">
+                    <span class="item-title mr20">紧急联系人手机号</span>
+                    <input type="tel" placeholder="请输入紧急联系人手机号" id="emeMobile" name="emeMobile" class="input-item"/>
                 </div>
             </div>
         </form>
@@ -41,6 +78,7 @@
         </div>
     </div>
     <link rel="import" href="../footer.html?__inline">
+	<script src="../js/lib/city.js"></script>
     <script>
         require(['app/controller/user/Register']);
     </script>
