--- a/static/html/user/set.html
+++ b/static/html/user/set.html
@@ -32,7 +32,7 @@
             </a>
             <i class="right-arrow"></i>
         </div>
-        <div class="user-list-item border-bottom-1px am-flexbox am-flexbox-justify-between">
+        <!--<div class="user-list-item border-bottom-1px am-flexbox am-flexbox-justify-between">
             <a href="./set-tradePwd.html" class="am-flexbox am-flexbox-item">
                 <span>支付密码</span>
             </a>
@@ -43,7 +43,7 @@
                 <span>我的银行卡</span>
             </a>
             <i class="right-arrow"></i>
-        </div>
+        </div>-->
     </div>
     
 	<div class="normal-fix-footer">
