--- a/static/html/activity/activity-addedit.html
+++ b/static/html/activity/activity-addedit.html
@@ -62,8 +62,8 @@
             </div>
             <div class="form-item border-bottom-1px">
                 <div class="am-flexbox">
-                    <span class="item-title mr20">成行人数</span>
-                    <input type="text" placeholder="请输入成行人数" id="groupNum" name="groupNum" class="input-item"/>
+                    <span class="item-title mr20">最少成行人数</span>
+                    <input type="text" placeholder="请输入最少成行人数" id="groupNum" name="groupNum" class="input-item"/>
                 </div>
             </div>
             <div class="form-item border-bottom-1px">
