--- a/static/html/index.html
+++ b/static/html/index.html
@@ -25,10 +25,10 @@
                 <div class="cate-icon activity-icon"></div>
                 <p>活动管理</p>
             </a>
-            <div id="singup" class="cate-item">
+            <a href="./order/order-list.html"  id="singup" class="cate-item">
                 <div class="cate-icon singup-icon"></div>
                 <p>报名管理</p>
-            </div>
+            </a>
         </div>
         <div class="cateline am-flexbox am-flexbox-justify-between">
             <div id="account" class="cate-item">
