v110第一次发包

--- a/static/html/activity/activity-list.html
+++ b/static/html/activity/activity-list.html
@@ -34,10 +34,8 @@
         </div>
     </div>
 	
-    <div style="height: 1.2rem;"></div>
-    <div class="fixft ptb20lr30 bg_fff">
-		<a href="./activity-addedit.html" class="am-button am-button-red wp100" id="addBtn">发布活动</a>
-	</div>
+	
+	<a class="activityAddBtn"  id="addBtn" href="./activity-addedit.html"></a>
 	
     <link rel="import" href="../footer.html?__inline">
     <script>
