--- a/static/html/user/login.html
+++ b/static/html/user/login.html
@@ -25,10 +25,11 @@
         </form>
         <div class="top-info clearfix">
             <a class="fl" href="./findPwd.html">找回密码</a>
-            <a class="fr reg-a" href="./register.html">注册</a>
+			<div class="rememberInfo fr"><samp>记住账号密码</samp><i></i></div>
         </div>
         <div class="login-btn wp100">
             <button id="loginBtn" class="am-button am-button-primary wp100">登录</button>
+            <a class="reg-a" href="./register.html">没有账号？点击注册</a>
         </div>
     </div>
     <link rel="import" href="../footer.html?__inline">
