--- a/static/html/user/login.html
+++ b/static/html/user/login.html
@@ -29,7 +29,7 @@
         </div>
         <div class="login-btn wp100">
             <button id="loginBtn" class="am-button am-button-primary wp100">登录</button>
-            <a class="reg-a" href="./register.html">没有账号？点击注册</a>
+            <a class="reg-a" href="./register.html">没有账号？点击申请</a>
         </div>
     </div>
     <link rel="import" href="../footer.html?__inline">
