--- a/static/html/user/register.html
+++ b/static/html/user/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="import" href="../head.html?__inline">
-    <title>注册</title>
+    <title>申请</title>
     <!--SCRIPT_PLACEHOLDER-->
 </head>
 
@@ -25,8 +25,8 @@
             </div>
             <div class="form-item border-bottom-1px">
                 <div class="am-flexbox">
-                    <span class="item-title mr20">昵称</span>
-                    <input type="text" placeholder="请输入昵称" id="outName" name="outName" class="input-item"/>
+                    <span class="item-title mr20">户外昵称</span>
+                    <input type="text" placeholder="请输入户外昵称" id="outName" name="outName" class="input-item"/>
                 </div>
             </div>
             <div class="form-item border-bottom-1px">
@@ -74,7 +74,7 @@
             </div>
         </form>
         <div class="register-btn">
-            <button id="registerBtn" class="am-button am-button-primary wp100">注册</button>
+            <button id="registerBtn" class="am-button am-button-primary wp100">申请</button>
         </div>
     </div>
     <link rel="import" href="../footer.html?__inline">
