--- a/static/html/activity/activity-list.html
+++ b/static/html/activity/activity-list.html
@@ -35,7 +35,7 @@
     </div>
 	
 	
-	<a class="activityAddBtn"  id="addBtn" href="./activity-addedit.html"></a>
+	<a class="activityAddBtn"  id="addBtn"></a>
 	
     <link rel="import" href="../footer.html?__inline">
     <script>
