--- a/static/html/index.html
+++ b/static/html/index.html
@@ -21,14 +21,14 @@
     </a>
     <div class="category-wrapper">
         <div class="cateline am-flexbox am-flexbox-justify-between">
-            <a href="./activity/activity-list.html" id="activity" class="cate-item">
+            <div id="activity" class="cate-item">
                 <div class="cate-icon activity-icon"></div>
                 <p>活动管理</p>
-            </a>
-            <a href="./order/order-list.html"  id="singup" class="cate-item">
+            </div>
+            <div id="singup" class="cate-item">
                 <div class="cate-icon singup-icon"></div>
                 <p>报名管理</p>
-            </a>
+            </div>
         </div>
         <div class="cateline am-flexbox am-flexbox-justify-between">
             <div id="account" class="cate-item">
