--- a/static/html/activity/activity-detail.html
+++ b/static/html/activity/activity-detail.html
@@ -89,7 +89,7 @@
 	<div class="activity-detail bg_fff mt20">
 		<div class="title b_e_b">
 			<p class="text fl"><i class="icon icon-liuyan"></i><samp>留言区</samp></p>
-			<a class="text fr tcolor_primary" id="goliuyan">去留言</a>
+			<a class="text fr tcolor_primary hidden" id="goliuyan">去留言</a>
 		</div>
 		<div class="tNotes-comment">
 			<div id="tNcommentList" class="wrap goTNcommentList"></div>
