--- a/static/html/activity/activity-list.html
+++ b/static/html/activity/activity-list.html
@@ -34,8 +34,8 @@
         </div>
     </div>
 	
-	
-	<a class="activityAddBtn"  id="addBtn"></a>
+	<!--新增按钮-->
+	<!--<a class="activityAddBtn"  id="addBtn"></a>-->
 	
     <link rel="import" href="../footer.html?__inline">
     <script>
