--- a/static/html/activity/activity-detail.html
+++ b/static/html/activity/activity-detail.html
@@ -29,6 +29,8 @@
     		<p class="wp100 mt10"><i class="icon icon-data"></i><samp>报名截止日期:<i class="enrollEndDatetime"></i></samp></p>
     		<p class="wp100 mt10"><i class="icon icon-data"></i><samp>活动日期:<i class="data"></i></samp></p>
     		<p class="wp100 mt10"><i class="icon icon-userNum"></i><samp>最少<i class="userNum"></i>人成行</samp></p>
+    		<p class="wp100 mt10"><i class="icon icon-address"></i><samp>集合地:<i class="placeAsse"></i></samp></p>
+    		<p class="wp100 mt10"><i class="icon icon-address"></i><samp>目的地:<i class="placeDest"></i></samp></p>
     	</div>
     </div>
     
@@ -102,7 +104,8 @@
 		<div class="title b_e_b">
 			<p class="text fl"><i class="icon icon-baoming"></i><samp>报名须知</samp></p>
 		</div>
-		<div class="detail ptb20lr30" id="act_enroll"></div>
+		<div class="detail ptb20lr30" id="act_enroll" style="max-height: 10rem;"></div>
+		<div class="tc wp100 ptb20lr30 tcolor_primary" id="act_enroll_more">查看更多</div>
 	</div>
 	
 	<!--免责申明-->
@@ -110,7 +113,8 @@
 		<div class="title b_e_b">
 			<p class="text fl"><i class="icon icon-mianze"></i><samp>免责申明</samp></p>
 		</div>
-		<div class="detail ptb20lr30" id="act_mzsm"></div>
+		<div class="detail ptb20lr30" id="act_mzsm" style="max-height: 10rem;"></div>
+		<div class="tc wp100 ptb20lr30 tcolor_primary" id="act_mzsm_more">查看更多</div>
 	</div>
 	
 	<!--注意事项-->
