--- a/static/html/activity/activity-list.html
+++ b/static/html/activity/activity-list.html
@@ -13,8 +13,7 @@
         	<div class="scroll-content">
 	            <div class="am-tabs-ink-bar am-tabs-ink-bar-animated" style="transform: translate3d(0px, 0px, 0px); width: 1.8rem;"></div>
 	            <div class="am-tabs-tab-active am-tabs-tab">全部</div>
-	            <div class="am-tabs-tab">审核中</div>
-	            <div class="am-tabs-tab">审核未通过</div>
+	            <div class="am-tabs-tab">待发布</div>
 	            <div class="am-tabs-tab">已发布</div>
 	            <div class="am-tabs-tab">已成团</div>
 	            <div class="am-tabs-tab">未成团</div>
