--- a/static/html/activity/activity-detail.html
+++ b/static/html/activity/activity-detail.html
@@ -43,7 +43,7 @@
     </div>
     <div class="difficulty bg_fff">
     	<div class="wrap">
-    		<samp>强度系数</samp>
+    		<samp>风景系数</samp>
     		<div class="starWrap" id="indexQd">
 				<i data-score='1' class="star"></i>
 				<i data-score='2' class="star"></i>
@@ -73,6 +73,14 @@
 			</div>
     	</div>
     </div>
+    
+    <!--地方介绍-->
+	<div class="activity-detail bg_fff mt20">
+		<div class="title b_e_b">
+			<p class="text fl"><i class="icon icon-placeDesc"></i><samp>地方介绍</samp></p>
+		</div>
+		<div class="detail ptb20lr30 over-hide" id="placeDesc"></div>
+	</div>
     
     <div class="mallDetail-detail activityDetail-tag bg_fff b_e_b over-hide mt20" id="detailNav">
     	<div class="nav active">活动介绍</div>
