--- a/static/html/user/jf-account.html
+++ b/static/html/user/jf-account.html
@@ -9,12 +9,13 @@
 
 <body>
 	
-    <div class="user-top-wrap account-wrap xjk-top-wrap am-flexbox am-flexbox-dir-column">
+    <div class="user-top-wrap account-wrap am-flexbox am-flexbox-dir-column ">
         <div class="top-infos">
             <p class="amount-tip">可用积分</p>
             <p class="remain-amount" id="amount">0.00</p>
             <div class="xjk-button">
                 <button id="transferAccountsBtn" class="am-button">转账</button>
+                <button id="withdrawBtn" class="am-button ml50">提现</button>
             </div>
         </div>
     </div>
