--- a/static/html/user/xjk-account.html
+++ b/static/html/user/xjk-account.html
@@ -12,10 +12,20 @@
         <div class="top-infos">
             <p class="amount-tip">可用小金库</p>
             <p class="remain-amount" id="amount">0.00</p>
-            <div class="xjk-button">
-                <button id="transferAccountsBtn" class="am-button">转账</button>
-            </div>
         </div>
+        <div class="xjk-button">
+            <button id="transferAccountsBtn" class="am-button">转账</button>
+        </div>
+    </div>
+    <div class="user-income-wrap bg_fff">
+    	<div class="fl tc">
+    		<samp>累计收益</samp>
+    		<p id="backAmount">0.00</p>
+    	</div>
+    	<div class="fr tc">
+    		<samp>未到账收益</samp>
+    		<p id="unbackAmount">0.00</p>
+    	</div>
     </div>
     <div class="am-whitespace-sm"></div>
     <div class="account-flow-list" id="content"></div>
